--- a/VRChat/99/1174799.html
+++ b/VRChat/99/1174799.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fzhwI5RMxMcSAsC3W0SLpXvp0ZKPFwVBq6+dnSc0Kvk="></script>
+    "Wlb5bQiTx3GAbtG68yxVlmy1M+M2j/ijPFGLvl2BkC4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ArmoredPack04","description":"DDW-019-J 「Onyx」　試製実体剣\nDDD-020 「Hyperion」　機動ミサイルコンテナユニット\nDDW-021-R/DDW-021-R2 「Ishtar」　制式刺突槍　\nDDW-022-R 「Minokawa」　固定アーム式電磁砲\nDDD-023-TypeS 汎用軽装甲\nDDW-024-C 「Obelisk」　\n\nを提供します","url":"https://booth.pm/ja/items/1174799","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1174799/4ab9f246-1902-4f55-b677-90693cbec14e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fzhwI5RMxMcSAsC3W0SLpXvp0ZKPFwVBq6+dnSc0Kvk="></script>
+    nonce="Wlb5bQiTx3GAbtG68yxVlmy1M+M2j/ijPFGLvl2BkC4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -566,9 +566,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
