--- a/VRChat/60/1166760.html
+++ b/VRChat/60/1166760.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FeYJSXy7v8MBGXRdGVbSN814IbVYi/bVkk13VIPBEwE="></script>
+    "FCQdMe6n6ckc9eHtOEfRmiKJbppnTnJWjskaEAIM018="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat/cluster向け3Dモデル 白音(しろね)","description":"オリジナルっ子の白音(しろね)ちゃんです!!\n\nVRChat・clusterにすぐにアップロードできるように調整してあります!\n\nまた、Blenderファイルを梱包しているので、改変、別用途での使用も可能です!!\n\n内容物\n・Unitypackageファイル(VRChat向け)ポリゴン数:30,421\n・VRMファイル(cluster向け)ポリゴン数:30,421\n・Blenderファイル\n・改変したい人用テクスチャ\n・取り扱い説明書\n\nVRM版はニコニ立体にてご覧いただけます\nhttps://3d.nicovideo.jp/works/td50782\n\nVRoid Hubだと動いてるとこも見れます!!\nhttps://hub.vroid.com/characters/6304583272717756822/models/5120677257262894793","url":"https://booth.pm/ja/items/1166760","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/96e607b6-d0b4-45be-93a9-04c0ca140e9c/i/1166760/f180db0c-7d32-4b0b-b26b-0d5cc4dea745_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FeYJSXy7v8MBGXRdGVbSN814IbVYi/bVkk13VIPBEwE="></script>
+    nonce="FCQdMe6n6ckc9eHtOEfRmiKJbppnTnJWjskaEAIM018="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -463,9 +463,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
