--- a/VRChat/70/1376570.html
+++ b/VRChat/70/1376570.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Pp0ecXI6ELn7zEEKtTXN3ANGwnn2mKkI4f1f+KOynLc="></script>
+    "4yDIckjtLFO2IVH7avnzpv3QJSgKDPFzOtVDuzr0IHE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル  ","description":"VRChat向けのオリジナル3D銃です。\n\n内容\n\nfbxファイル\nunitypackage\nreadme.txt\nテクスチャ\n\n\n\n\n各種パーツはシェイプキーで調整できます。\n\n\n\n\n\n改変、再配布について\n当モデルの改変、VRChatへのアップロードは自由です。\nただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。\n改変されたモデルの著作権はGarazooに帰属し、このモデルを使用して起きた損害や問題については責任を負いません。\nこの規約は今後変更される可能性があります。\n\nなにかありましたらこちらまでお願いします。\n\nhttps://twitter.com/GARAZOO1\n\nxx更新履歴ｘｘ\n2019/05/22 Gz556モデルにシェイプキーを追加した物をつくりました。、本体の長さ、サイドレイルの追加、など調整できるようになりました。\n\n2019/05/26 Gz9モデルにシェイプキーモデルを追加\n\n2020/01/31 GzモデルをA4にアップグレードしました。","url":"https://booth.pm/ja/items/1376570","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/2077c6ee-ab05-48e5-9ea0-2472f7c4b9d9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Pp0ecXI6ELn7zEEKtTXN3ANGwnn2mKkI4f1f+KOynLc="></script>
+    nonce="4yDIckjtLFO2IVH7avnzpv3QJSgKDPFzOtVDuzr0IHE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
