--- a/VRChat/69/1376269.html
+++ b/VRChat/69/1376269.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5/CNcebEVGiM/prU3bL4XkBcmKWnRZvJGako4utpn0k="></script>
+    "0J+47diHpeiIKE9LzGjujlzuHigi+bupfhPHrieEulc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Crazy Emission v1.0","description":"エミッション系機能が複数搭載されたVRChat向けシェーダーです。\n\nDiffuseテクスチャはライティングされるので、通常のアバター用シェーダーとして利用することも可能です。\n\nバンドル版はEmissive Texture vol.1とのバンドルです。バンドル版は20%オフとなっています。\nhttps://reflex.booth.pm/items/1373458\n\nThis shader is made to be used in VRChat.\nThis shader has some emissive features like emissive scroll.\n","url":"https://booth.pm/ja/items/1376269","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/cbda31cc-ab61-4a8a-900c-882477cd9424/i/1376269/5889946d-cf0e-4a5a-a1f5-352921a8f270_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5/CNcebEVGiM/prU3bL4XkBcmKWnRZvJGako4utpn0k="></script>
+    nonce="0J+47diHpeiIKE9LzGjujlzuHigi+bupfhPHrieEulc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -574,9 +574,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
