--- a/VRChat/73/1376073.html
+++ b/VRChat/73/1376073.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "DSuu9h+mM4dD/AKAbKUKRUNvEEaBfXcVvAD3pP3pR6Q="></script>
+    "jthB5ZcdMJDcITywMuxkoaVPv2csDMlWtaMXDqxQ0nU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"紳士・淑女の革靴【#VRoid 】","description":"フォーマルからビジネス、カジュアルまでこなせる革靴で、全3色ご用意しました。\n型紙「ローファー」で制作しています。\n\n※この商品はVRoid Studioモデル用の.vroidcustomitemデータです。v1.10.0以前のバージョンではご使用いただけません。\n\n\nLeather shoes that can handle from formal wear to business and casual wear.\nThis item is .vroidcustomitem data for VRoid Studio models.\nNot available in versions prior to v1.10.0.","url":"https://booth.pm/ja/items/1376073","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/e7839b9e-dbeb-4909-ac44-7385229a0366/i/1376073/40e782ed-fb23-4e4e-a931-13d1fcd39a7b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DSuu9h+mM4dD/AKAbKUKRUNvEEaBfXcVvAD3pP3pR6Q="></script>
+    nonce="jthB5ZcdMJDcITywMuxkoaVPv2csDMlWtaMXDqxQ0nU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -457,9 +457,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
