--- a/VRChat/49/1375949.html
+++ b/VRChat/49/1375949.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1zzwm3guDijv5OjGIM6oYQIUbCOqoS7DNQwU9FKx+mI="></script>
+    "gEhcfb/tQTtLa0Dka7V/wyF3Zl+2XeH7zh0OO4lfYhs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"本型かばん","description":"--更新履歴----------------------------------------\n\u003e 2019年5月18日 bookaban.zip\n- 配布開始\n\n\u003e 2020年7月11日 Bookaban_v2.00.zip\n- テクスチャ変更\n- UTS2化\n- 原点修正\n----------------------------------------------------\n\nVRChatでの利用を想定した本型かばんです。booth利用方法の確認がてらテスト配布します。\nunitypackageインポート後、ChestまたはLeft shoulderに配置することになりますが\n胴体との貫通対策のためにDynamicBoneの設定またはご自身でのウエイト再設定を推奨します。\n\n","url":"https://booth.pm/ja/items/1375949","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ec9d8797-e97d-4d27-8629-8d3982b7b981/i/1375949/8f3c408d-a6cc-4b40-b5fc-449d9af87fa7_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1zzwm3guDijv5OjGIM6oYQIUbCOqoS7DNQwU9FKx+mI="></script>
+    nonce="gEhcfb/tQTtLa0Dka7V/wyF3Zl+2XeH7zh0OO4lfYhs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -170,7 +170,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1979
+                                      1981
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -186,7 +186,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1979
+                                      1981
                                     </div>
                                   </div></a>
                                 </div>
@@ -445,9 +445,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
