--- a/VRChat/65/1376065.html
+++ b/VRChat/65/1376065.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "G+ZwnMP0q6Kb060JB7TofWYiM1WtSfbkgpBsM1a89lc="></script>
+    "ATyyANTqRyCXOPK0Iwchx1k+XvRa4pw/p9VToOEFIdE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRCアバターアクセサリ―】Halo","description":"VRC想定アバターアクセサリ３Dモデルです\n\n\n△4572\n\n\nファイル\n*FBXファイル\n*MAYAファイル\n*テクスチャファイル\n*Unity packageファイル\n\n\n\n入れ方）AmatureのHeadに入れて位置を調整してください。\nPrefabはアニメーションが入ってますので勝手に位置が変わってしまいます。高さが気に入らない場合、アニメーションのPostionのY値を調整してください。\n\n\n手首とかに入れてブレスレットでも使えます！\n\n\n\n*本モデルはArktoon-Shader1.0.1.1を使用しております。\nhttps://booth.pm/ja/items/1027997\n*本モデルはクリスタルシェーダーを使用しております。\n→https://booth.pm/ja/items/1148311\n\n*このモデルの再配布、制作自己主張はおやめください。\n*アクセサリーデータの改造自由\n\nなにか分からないことがございましたら\nTwitter ＠Luche_VRC　までご連絡ください。","url":"https://booth.pm/ja/items/1376065","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/c8c6e1b2-84b4-4743-9383-98bec6ad8fbf/i/1376065/2108a000-1e9d-4ea0-a0c3-c2ba717ebac1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G+ZwnMP0q6Kb060JB7TofWYiM1WtSfbkgpBsM1a89lc="></script>
+    nonce="ATyyANTqRyCXOPK0Iwchx1k+XvRa4pw/p9VToOEFIdE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -428,9 +428,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
