--- a/VRChat/42/1375942.html
+++ b/VRChat/42/1375942.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "I8UncCOspP1MVppnrqD6atxapofclN93z3njLG9VMUw="></script>
+    "f7zQcueB5AmQlj9cmq/2t6k3dGNOkVQD4gAc9f12z14="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dデータ「もこもこツインテール（ダイナミックボーン設定済み）」","description":"○3Dデータ「もこもこツインテール（ダイナミックボーン設定済み）」\n\n\n自分用に作ったやつでしたが、せっかくなので放流します\n基本無料ですが、ガチャガチャ回しに行く応援してくれると嬉しいです\n\n---------------------------------------------------------------------------------------\n更新履歴\n2019/5/18\nリリース開始\n\n---------------------------------------------------------------------------------------\n\n○使い方\nアセット「ダイナミックボーン」を予めインポートしてからunitypackageをドラッグアンドドロップで入れてください\n色はサンプルで白と緑のprefabを用意しております\nUnity上で色調整は可能ですので、お好みの色に変更してお使いください！\n\n\n\n○内容物\n・twintail.unitypackage（基本こちらをインポートしてお使いください）\n・object（fbxファイルです）\n・texture（PNGテクスチャ各種）\n\n\n○禁止事項\n・購入者以外がデータ利用できるような行為全般（公にアップロード、他人へのデータ譲渡など）\n　※ワールドオブジェクトとしての設置等、元データが他人の手に渡らない形であれば問題ありません\n・特定の個人や団体への誹謗中傷をするのに使う\n・製作者を名乗る等、著しく良識に欠ける行為","url":"https://booth.pm/ja/items/1375942","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d92f6cb7-dd7e-4d4c-81c1-456eb755836b/i/1375942/353db80e-87e3-4c9a-9ae5-492e609cd199_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I8UncCOspP1MVppnrqD6atxapofclN93z3njLG9VMUw="></script>
+    nonce="f7zQcueB5AmQlj9cmq/2t6k3dGNOkVQD4gAc9f12z14="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -458,9 +458,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
