--- a/VRChat/26/1375426.html
+++ b/VRChat/26/1375426.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FprEgItWV4oaHJp49YBIrqLN9IoD4AWImeInJBV6how="></script>
+    "xP54Kw2EYuHg4yVu09TSdY8ssJJ82zB3cH+fOBa2des="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】マスク用テクスチャ｜#VRChat #VRoid","description":"synqark様のシェーダー『Arktoon-Shaders』のEmissionに適用することを想定したVRoidモデル用マスクデータ（白黒画像）です。\n\nVRChatにて適用箇所がサムネイル左上のように光ります。\n白い部分が光り、黒い部分はそのままです。\n（正しくはマスクされた箇所の指定された色は影や周囲の色の影響を受けなくなります。）\n\nシェーダーの使い方については配布先様をご参照ください。\nこのマスクデータは他の用途で使っても構いません。\n\n商品がお気に召しましたらブースト用をご購入してくださると大変励みになります。\n無料版とブースト用の中身は同じです。\n\nArktoon-Shaders｜Packetbir様\nhttps://booth.pm/ja/items/1027997","url":"https://booth.pm/ja/items/1375426","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1375426/9f2960d3-ea79-4bab-907f-51a7a2fa75cb_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FprEgItWV4oaHJp49YBIrqLN9IoD4AWImeInJBV6how="></script>
+    nonce="xP54Kw2EYuHg4yVu09TSdY8ssJJ82zB3cH+fOBa2des="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -509,9 +509,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
